chore: rename project

--- a/apps/su-gtd/.eslintrc.json
+++ b/apps/su-gtd/.eslintrc.json
@@ -21,7 +21,7 @@
           "error",
           {
             "type": "element",
-            "prefix": "angular-nest-nx",
+            "prefix": "su-gtd",
             "style": "kebab-case"
           }
         ]
