--- a/package.json
+++ b/package.json
@@ -25,26 +25,43 @@
     "@nebular/security": "9.0.2",
     "@nebular/theme": "9.0.2",
     "@nestjs/common": "^8.4.4",
+    "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^8.4.4",
+    "@nestjs/jwt": "^10.0.2",
+    "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^8.4.4",
+    "@nestjs/typeorm": "^9.0.1",
     "@nrwl/angular": "13.10.2",
+    "bcryptjs": "^2.4.3",
     "bootstrap": "5.1.3",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "classlist.js": "1.1.20150312",
+    "connect-pg-simple": "^8.0.0",
+    "cookie-parser": "^1.4.6",
     "core-js": "2.5.1",
     "eva-icons": "^1.1.3",
+    "express-session": "^1.17.3",
     "intl": "1.2.5",
     "ionicons": "2.0.1",
+    "mysql2": "^3.2.0",
     "nebular-icons": "1.1.0",
     "node-sass": "^4.12.0",
     "normalize.css": "6.0.0",
     "pace-js": "1.0.2",
+    "passport": "^0.6.0",
+    "passport-http": "^0.3.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "roboto-fontface": "0.8.0",
     "rxjs": "~7.5.5",
     "socicon": "3.0.5",
     "style-loader": "^1.1.3",
+    "subsink": "^1.0.2",
     "tslib": "^2.0.0",
     "typeface-exo": "0.0.22",
+    "typeorm": "^0.3.12",
     "web-animations-js": "^2.3.2",
     "zone.js": "~0.11.4"
   },
@@ -67,10 +84,15 @@
     "@nrwl/node": "13.10.2",
     "@nrwl/tao": "13.10.2",
     "@nrwl/workspace": "13.10.2",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/cookie-parser": "^1.4.3",
     "@types/jest": "27.4.1",
     "@types/node": "14.14.33",
+    "@types/passport": "^1.0.12",
+    "@types/passport-jwt": "^3.0.8",
     "@typescript-eslint/eslint-plugin": "~5.3.0",
     "@typescript-eslint/parser": "~5.3.0",
+    "concurrently": "^7.6.0",
     "cypress": "^9.5.4",
     "eslint": "8.13.0",
     "eslint-config-prettier": "8.5.0",
