--- a/nx.json
+++ b/nx.json
@@ -4,8 +4,7 @@
     "defaultBase": "master"
   },
   "cli": {
-    "defaultCollection": "@nrwl/angular",
-    "packageManager": "npm"
+    "analytics": "d2286d37-17dd-41da-9ae3-dba03e3279d0"
   },
   "implicitDependencies": {
     "package.json": {
@@ -18,7 +17,12 @@
     "default": {
       "runner": "@nrwl/workspace/tasks-runners/default",
       "options": {
-        "cacheableOperations": ["build", "lint", "test", "e2e"]
+        "cacheableOperations": [
+          "build",
+          "lint",
+          "test",
+          "e2e"
+        ]
       }
     }
   },
