--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@angular/compiler": "~13.3.3",
     "@angular/core": "~13.3.3",
     "@angular/forms": "~13.3.3",
+    "@angular/material": "^13.3.9",
     "@angular/platform-browser": "~13.3.3",
     "@angular/platform-browser-dynamic": "~13.3.3",
     "@angular/router": "~13.3.3",
     "@nebular/auth": "9.0.2",
+    "@nebular/date-fns": "^9.0.2",
     "@nebular/eva-icons": "9.0.2",
     "@nebular/security": "9.0.2",
     "@nebular/theme": "9.0.2",
@@ -32,8 +34,11 @@
     "@nestjs/platform-express": "^8.4.4",
     "@nestjs/typeorm": "^9.0.1",
     "@nrwl/angular": "13.10.2",
+    "@types/chart.js": "^2.9.37",
+    "autoprefixer": "10.4.5",
     "bcryptjs": "^2.4.3",
     "bootstrap": "5.1.3",
+    "chart.js": "^3.6.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "classlist.js": "1.1.20150312",
@@ -46,6 +51,7 @@
     "ionicons": "2.0.1",
     "mysql2": "^3.2.0",
     "nebular-icons": "1.1.0",
+    "ng2-charts": "^3.0.0",
     "node-sass": "^4.12.0",
     "normalize.css": "6.0.0",
     "pace-js": "1.0.2",
